# video_resize_c-

./: .gitignore  CMakeLists.txt  README.md
include/: video_processor.hpp
src/: main.cpp  server.cpp  video_processor.cpp
